More tests: runtime/cache/config
Cache: MediaType, Payload, FileAdapter(put/get/missing), тоже самое для
TempFileAdapter, использумеого в тестах
RegistryClient: Tags(put/get, размер)
ConfigBranch: что валидация загрузки конфигурации корректа
RuntimeAdapters: тест с фейковыми adapter
TempFileCacheAdapter реализованы методы has/get/put через обычный с
cleanup
Пофиксил комментарии по работе с ./gradlew